<resources>
    <string name="app_name">mobilize</string>
    <string name="server_name">mobilize</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="upload">Upload</string>
    <string name="ok">OK</string>
    <string name="ignore">Ignore</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="wait">Wait</string>
    <string name="retry_now">Retry Now</string>
    <string name="retry_later">Retry Later</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="click_more_info">Click here for more information</string>
    <string name="discard">Discard</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="all">All</string>
    <string name="set">Set</string>
    <string name="continue_string">Continue</string>
    <string name="off">Off</string>
    <string name="last_successful_upload">Last successful upload</string>
    <string name="upload_now">Upload Now</string>
    <string name="empty_value">-</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map">Map</string>
    <string name="menu_satellite">Satellite</string>
    <string name="maps_debug_api_key">0EdfpwSqYgf-sUTf8ZKTfeUB2RQihIRqKtfT4HA</string>
    <string name="maps_release_api_key">0v-wLH9cxlVMxbPMFw81x2mmbeUcsS9rHCFTgkQ</string>
    <string name="eula_title">Welcome</string>
    <string name="eula_text">Disclaimer/Agreement stuff goes here.</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_cancel">Cancel</string>
    <string name="login_error">Login Error</string>
    <string name="login_invalid_password">Unable to authenticate. Please check username and update the password.</string>
    <string name="login_account_disabled">This user account has been disabled.</string>
    <string name="login_network_error">Unable to communicate with server. Please try again later.</string>
    <string name="login_server_error">The server returned an unexpected response. Please try again later.</string>
    <string name="login_authenticating">Authenticating with %s servers...</string>
    <string name="login_download_campaign">Downloading Campaign...</string>
    <string name="login_error_downloading_campaign">Error downloading campaign</string>
    <string name="login_username_title">Username:</string>
    <string name="login_password_title">Password:</string>
    <string name="login_server_title">Server:</string>
    <string name="login_choose_server">Default Servers</string>
    <string name="login_submit">Login</string>
    <string name="login_invalid_server">Please Enter a valid server name</string>
    <string name="login_activity_login_button_description">Login Button</string>
    <string name="login_register_new_account"><a href="#">register an account</a></string>
    <string name="mobility_missing_desc">Please make sure the Mobility package is installed.</string>
    <string name="mobility_market_btn_label">Install Mobility</string>
    <string name="mobility_market_link">market://details?id=com.android.example</string>
    <string name="mobiltiy_control_1min">1 min</string>
    <string name="mobility_control_5min">5 min</string>
    <string name="mobility_control_off_description">Off Button</string>
    <string name="mobility_control_1min_description">1 Minute Button</string>
    <string name="mobility_control_5min_description">5 Minutes Button</string>
    <string name="mobility_control_sampling_interval">Sampling interval:</string>
    <string name="mobility_control_recent_mobility_modes_title">Most recent mobility modes (last 20 minutes)</string>
    <string name="mobility_control_no_points">No mobility modes were collected recently.</string>
    <string name="mobility_control_upload_count_title">To upload</string>
    <string name="mobility_control_total_title">Total</string>
    <string name="mobility_upload_error_message">There was an error uploading: %s</string>
    <string name="mobility_network_error_message">Network error occurred while trying upload probes</string>
    <string name="recent_mobility_aggregate_last_week_title">Last Week</string>
    <string name="recent_mobility_aggregate_baseline_title">During Baseline</string>
    <string name="admin_dialog_title">Enter pin code:</string>
    <string name="admin_dialog_invalid_pin">Wrong pin code.</string>
    <string name="filter_all_campaigns">All Campaigns</string>
    <string name="filter_all_surveys">All Surveys</string>
    <string name="controls_filter_prev_description">Filter Previous Button</string>
    <string name="controls_filter_current_description">Filter Button</string>
    <string name="controls_filter_next_description">Filter Next Button</string>
    <string name="title_campaigns">My Campaigns</string>
    <string name="title_surveys">Surveys</string>
    <string name="title_response_history">Response History</string>
    <string name="title_upload_queue">Upload Queue</string>
    <string name="title_profile">Profile</string>
    <string name="title_help">Help</string>
    <string name="title_mobility">Mobility</string>
    <string name="title_add_campaign">Add Campaign</string>
    <string name="title_response">Response</string>
    <string name="title_campaign_info">Campaign Info</string>
    <string name="title_survey_info">Survey Info</string>
    <string name="dashboard_campaigns">Campaigns</string>
    <string name="dashboard_surveys">Surveys</string>
    <string name="dashboard_response_history">Response\nHistory</string>
    <string name="dashboard_upload_queue">Upload\nQueue</string>
    <string name="dashboard_profile">Profile</string>
    <string name="dashboard_help">Help</string>
    <string name="dashboard_mobility">Mobility</string>
    <string name="dashboard_campaigns_btn_description">Campaign List Dashboard Button</string>
    <string name="dashboard_surveys_btn_description">Surveys Dashboard Button</string>
    <string name="dashboard_feedback_btn_description">Response History Dashboard Button</string>
    <string name="dashboard_upload_queue_btn_description">Upload Queue Dashboard Button</string>
    <string name="dashboard_profile_btn_description">Profile Dashboard Button</string>
    <string name="dashboard_mobility_btn_description">Mobility Dashboard Button</string>
    <string name="dashboard_help_btn_description">Help Dashboard Button</string>
    <string name="description_logo_home">Home Button</string>
    <string name="help_goto_dashboard">Dashboard</string>
    <string name="help_goto_filter">Filter</string>
    <string name="help_goto_list">List</string>
    <string name="help_dashboard_header_text">The Dashboard makes it easy to get to campaigns, surveys, and your response history&lt;br/></string>
    <string name="help_dashboard_section">&lt;h2>&lt;img src=%1$s>%2$s&lt;/h2>&lt;p>%3$s&lt;/p></string>
    <string name="help_dashboard_campaigns_title">Campaigns</string>
    <string name="help_dashboard_campaigns_text">On the &lt;b>Campaign List&lt;/b> screen you can see the campaigns you are participating in (which have already been downloaded to the phone) as well as campaigns available for participation (which are on the server, available to be downloaded to the phone). You can access information about the campaigns you are participating in, as well as set up triggered reminders.</string>
    <string name="help_dashboard_surveys_title">Surveys</string>
    <string name="help_dashboard_surveys_text">On the &lt;b>Survey List&lt;/b> screen you can see and take surveys from all the campaigns you are participating in.</string>
    <string name="help_dashboard_response_history_title">Response History</string>
    <string name="help_dashboard_response_history_text">On the &lt;b>Response History&lt;/b> screen you can see calendar and map views of your response history.</string>
    <string name="help_dashboard_upload_queue_title">Upload Queue</string>
    <string name="help_dashboard_upload_queue_text">In the &lt;b>Upload Queue&lt;/b> you can manage the upload status of the responses you have just completed.</string>
    <string name="help_dashboard_profile_title">Profile</string>
    <string name="help_dashboard_profile_text">On the &lt;b>Profile&lt;/b> screen you can update your password, or logout and wipe your data.</string>
    <string name="help_dashboard_mobility_title">Mobility</string>
    <string name="help_dashboard_mobility_text">On the &lt;b>Mobility&lt;/b> screen you can see your mobility data.</string>
    <string name="invalid_survey">Invalid Survey</string>
    <string name="survey_complete">Survey Complete!</string>
    <string name="survey_submit_text">Submit text should appear here.</string>
    <string name="survey_title">Survey Title</string>
    <string name="survey_prompt">Prompt Text</string>
    <string name="survey_message_title">Message</string>
    <string name="survey_message_text">Message text should appear here.</string>
    <string name="survey_repeatable_set_terminate">Terminate</string>
    <string name="survey_repeatable_set_repeat">Repeat</string>
    <string name="survey_repeatable_set_title">End of repeatable set</string>
    <string name="survey_list_must_trigger">This survey can only be taken when a reminder goes off.</string>
    <string name="survey_list_invalid_survey">onSurveyActionStart: Error: Empty cursor returned.</string>
    <string name="prompt_repeatable_set_repeat">Would you like to repeat the set?</string>
    <string name="prompt_remote_launch">Launch</string>
    <string name="calendar_short_sunday">Sun</string>
    <string name="calendar_short_monday">Mon</string>
    <string name="calendar_short_tuesday">Tue</string>
    <string name="calendar_short_wednesday">Wed</string>
    <string name="calendar_short_thursday">Thu</string>
    <string name="calendar_short_friday">Fri</string>
    <string name="calendar_short_saturday">Sat</string>
    <string name="preferences_reminders_setup_title">Reminders</string>
    <string name="preferences_reminders_setup_summary">Set up reminders so you never forget to take a survey</string>
    <string name="preferences_update_password_title">Update Password</string>
    <string name="preferences_update_password_summary">Update your password if you get an Authentication Error</string>
    <string name="preferences_logout_title">Logout and Wipe</string>
    <string name="preferences_logout_summary">Logging out will remove all data from the phone including any data that has not been uploaded</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="preferences_response_history_title">Response History</string>
    <string name="preferences_profile_title">Profile</string>
    <string name="preferences_upload_queue_title">Upload Queue</string>
    <string name="preferences_mobility_title">Mobility</string>
    <string name="preferences_ohamage_version_title">Version</string>
    <string name="campaign_info_view_surveys">View Surveys</string>
    <string name="campaign_info_participate">Participate</string>
    <string name="campaign_info_entity_action_button_view_surveys_description">View Surveys Entity Button</string>
    <string name="campaign_info_entity_action_button_remove_description">Remove Entity Button</string>
    <string name="campaign_info_entity_action_button_participate_description">Participate Entity Button</string>
    <string name="profile_info_update_password">Update Password</string>
    <string name="profile_info_logout">Log Out, Wipe Data</string>
    <string name="profile_info_entity_action_button_update_password_description">Update Password Button</string>
    <string name="profile_info_entity_action_button_logout_description">Logout Button</string>
</resources>