<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <Button
        android:id="@+id/campaign_info_button_surveys"
        style="@style/InfoButton"
        android:contentDescription="@string/campaign_info_entity_action_button_view_surveys_description"
        android:drawableLeft="@drawable/pencilpaper"
        android:text="@string/campaign_info_view_surveys"
        android:visibility="gone" />

    <Button
        android:id="@+id/campaign_info_button_remove"
        style="@style/InfoButton"
        android:contentDescription="@string/campaign_info_entity_action_button_remove_description"
        android:drawableLeft="@drawable/trash"
        android:text="@string/remove"
        android:visibility="gone" />

    <Button
        android:id="@+id/campaign_info_button_particpate"
        style="@style/InfoButton"
        android:contentDescription="@string/campaign_info_entity_action_button_participate_description"
        android:drawableLeft="@drawable/plus"
        android:text="@string/campaign_info_participate"
        android:visibility="gone" />

</merge>