<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_weight="1"
	android:padding="8dip">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/dash_campaigns_btn"
			style="@style/HomeButton"
			android:drawableTop="@drawable/dashboard_campaigns"
			android:text="@string/dashboard_campaigns" />

		<Button
			android:id="@+id/dash_surveys_btn"
			style="@style/HomeButton"
			android:drawableTop="@drawable/dashboard_surveys"
			android:text="@string/dashboard_surveys" />
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/dash_feedback_btn"
			style="@style/HomeButton"
			android:drawableTop="@drawable/dashboard_resphistory"
			android:text="@string/dashboard_response_history" />

		<Button
			android:id="@+id/dash_uploadqueue_btn"
			style="@style/HomeButton"
			android:drawableTop="@drawable/dashboard_upqueue"
			android:text="@string/dashboard_upload_queue" />
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/dash_profile_btn"
			style="@style/HomeButton"
			android:drawableTop="@drawable/dashboard_profile"
			android:text="@string/dashboard_profile" />

		<!-- <Button android:id="@+id/dash_settings_btn" style="@style/HomeButton" 
			android:drawableTop="@drawable/dashboard_settings" android:text="@string/title_settings" 
			/> -->

		<Button
			android:id="@+id/dash_help_btn"
			style="@style/HomeButton"
			android:drawableTop="@drawable/dashboard_help"
			android:text="@string/dashboard_help" />
	</LinearLayout>
</LinearLayout>